update after features added

--- a/bitnami/index.html
+++ b/bitnami/index.html
@@ -15,7 +15,7 @@
   <div class="container">
         <!-- logo.tpml -->
     <div>
-      <a href="/"><img alt="WordPress" src="/bitnami/logo.png" width="135"/></a>
+      <a href="/"><img alt="WordPress" src="/bitnami/135xNxlogo.png.pagespeed.ic.da4-Yys2Hf.png" width="135"/></a>
     </div>
 
 
